Add column names for metadata when running mysql with -T Change metadata info so that that MIN() and code MAX() reports that they can return NULL. Bug #324